fix: card toolbar date misalignment

--- a/src/styles/articles.css
+++ b/src/styles/articles.css
@@ -213,6 +213,7 @@
 .rss-dashboard-article-date {
   cursor: help;
   position: relative;
+  white-space: nowrap;
 }
 
 .rss-dashboard-article-date:hover {
